[package]
name = "mempool-sync"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>"]
edition = "2018"

[lib]
name = "mempool_sync"

[dependencies]
minisketch-rs = "*"
bitcoin = "*"
arrayref = "*"
rand = "0.6"
bitcoin_hashes = "*"
log = "*"
pretty_env_logger = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "oddsketch"
harness = false
