[package]
name = "mempool-sync-gadget"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
minisketch-rs = "*"
bitcoin = "*"
arrayref = "*"
bitcoin_hashes = "*"
log = "*"
env_logger = "*"
oddsketch = { git = "https://github.com/hlb8122/oddsketch-rs.git" }
futures-zmq = "*"
zmq = "*"
futures = "*"
tokio = "*"
serde_json = "*"
serde = "*"
reqwest = "*"
bytes = "*"
clap = { version = "*", features = ["yaml"]}
itertools = "*"
hex = "*"
chrono = "*"
colored = "*"
flexi_logger = "*"
